# NTL

./: .gitignore  CMakeLists.txt  README.md  README_EN.md
.github/workflows/: build.yml  code-analysis.yml
include/impl/: fix
include/ntl/: DigitsIterator.hh  all_base_literals.hh  digits_iterator.hh  simple_base_literals.hh
include/ntl/impl/: AsciiDigitTable.hh  CharConv.hh  CharsToNumber.hh  DigitViewTraits.hh  Helpers.hh  NumberDigitConvTraits.hh  char2digit.hh  chars2num.hh
tests/: CMakeLists.txt
tests/src/: main.cc
